syntax = "proto3";

package org.hypertrace.alerting.config.service.v1;

import "org/hypertrace/alerting/config/service/v1/event_condition.proto";

option java_multiple_files = true;

service EventConditionConfigService {
  rpc CreateEventCondition(CreateEventConditionRequest) returns (CreateEventConditionResponse) {}
  rpc UpdateEventCondition(UpdateEventConditionRequest) returns (UpdateEventConditionResponse) {}
  rpc GetAllEventConditions(GetAllEventConditionsRequest) returns (GetAllEventConditionsResponse) {}
  rpc DeleteEventCondition(DeleteEventConditionRequest) returns (DeleteEventConditionResponse) {}
}

message CreateEventConditionRequest {
  NewEventCondition new_event_condition = 1;
}

message CreateEventConditionResponse {
  EventCondition event_condition = 1;
}

message UpdateEventConditionRequest {
  EventCondition event_condition = 1;
}

message UpdateEventConditionResponse {
  EventCondition event_condition = 1;
}

message GetAllEventConditionsRequest {}

message GetAllEventConditionsResponse {
  repeated EventCondition event_condition = 1;
}

message DeleteEventConditionRequest {
  string event_condition_id = 1;
}

message DeleteEventConditionResponse {}
